modificacion en link de reservas

--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
             <div class="row special-list">
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/001.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/001.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto</h4>
@@ -198,15 +198,14 @@
 							</span>
 
                             <h5> $314.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=3&adults=1&children=2"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/002.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/002.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto y 2 Niños</h4>
@@ -215,15 +214,14 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $364.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=3&adults=1&children=2"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/003.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/003.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto y 3 Niños</h4>
@@ -232,15 +230,14 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/005.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/005.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2 Adultos</h4>
@@ -249,8 +246,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $314.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -258,7 +254,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/006.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/006.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2Adultos y 1 Niño</h4>
@@ -267,8 +263,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $364.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -276,7 +271,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/008.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/008.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2 Adultos y 2 Niños</h4>
@@ -285,8 +280,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -294,7 +288,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/009.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/009.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">3 Adultos</h4>
@@ -303,8 +297,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $364.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -312,7 +305,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/010.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/010.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">3 Adultos y 1 Niño</h4>
@@ -321,8 +314,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -330,7 +322,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/011.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/011.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">4 Adultos</h4>
@@ -339,8 +331,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=4"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -403,17 +394,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>HORARIO DE APERTURA</h3>
-                    <p><span class="text-color">Monday: </span>Closed</p>
-                    <p><span class="text-color">Tue-Wed :</span> 9:Am - 10PM</p>
-                    <p><span class="text-color">Thu-Fri :</span> 9:Am - 10PM</p>
-                    <p><span class="text-color">Sat-Sun :</span> 5:PM - 10PM</p>
+                    <p>Reserva <span class="text-color">24/7</span></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>INFORMACIÓN DEL CONTACTO
                     </h3>
                     <p class="lead">Vereda Susaca - Sector, Aquitania, Boyacá</p>
-                    <p class="lead"><a href="#">+57 320 3985300</a></p>
-                    <p><a href="#"> info@admin.com</a></p>
+                    <p class="lead"><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+57 320 3985300</a></p>
+                    <p><a href="mailto:lagomuisca@gmail.com"> lagomuisca@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>Redes Sociales</h3>
