--- a/gallery.html
+++ b/gallery.html
@@ -293,17 +293,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>HORARIO DE APERTURA</h3>
-                    <p><span class="text-color">Monday: </span>Closed</p>
-                    <p><span class="text-color">Tue-Wed :</span> 9:Am - 10PM</p>
-                    <p><span class="text-color">Thu-Fri :</span> 9:Am - 10PM</p>
-                    <p><span class="text-color">Sat-Sun :</span> 5:PM - 10PM</p>
+                    <p>Reserva <span class="text-color">24/7</span></p>
+
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>INFORMACIÓN DEL CONTACTO
                     </h3>
                     <p class="lead">Vereda Susaca - Sector, Aquitania, Boyacá</p>
-                    <p class="lead"><a href="#">+57 320 3985300</a></p>
-                    <p><a href="#"> info@admin.com</a></p>
+                    <p class="lead"><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+57 320 3985300</a></p>
+                    <p><a href="mailto:lagomuisca@gmail.com"> lagomuisca@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>Redes Sociales</h3>
