--- a/planes.html
+++ b/planes.html
@@ -165,7 +165,7 @@
             <div class="row special-list">
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/001.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/001.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto</h4>
@@ -175,15 +175,14 @@
 							</span>
 
                             <h5> $314.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=3&adults=1&children=2"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/002.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/002.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto y 2 Niños</h4>
@@ -192,15 +191,14 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $364.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=3&adults=1&children=2"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 special-grid drinks">
                     <div class="gallery-single fix">
-                        <img src="images/planes/003.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/003.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">1 Adulto y 3 Niños</h4>
@@ -209,15 +207,14 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/005.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/005.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2 Adultos</h4>
@@ -226,8 +223,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $314.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -235,7 +231,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/006.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/006.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2Adultos y 1 Niño</h4>
@@ -244,8 +240,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $364.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -253,7 +248,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch">
                     <div class="gallery-single fix">
-                        <img src="images/planes/008.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/008.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">2 Adultos y 2 Niños</h4>
@@ -262,8 +257,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -271,7 +265,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/009.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/009.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">3 Adultos</h4>
@@ -280,8 +274,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $364.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -289,7 +282,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/010.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/010.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">3 Adultos y 1 Niño</h4>
@@ -298,8 +291,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=3&children=1"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -307,7 +299,7 @@
 
                 <div class="col-lg-4 col-md-6 special-grid lunch1">
                     <div class="gallery-single fix">
-                        <img src="images/planes/011.jpeg" class="img-fluid" alt="Image">
+                        <img src="images/planes/011.jpeg" class="img-fluid" alt="Domos aquitania Boyaca">
                         <center><span>Ver</span></center>
                         <div class="why-text">
                             <h4 style="color: rgb(47, 0, 255);">4 Adultos</h4>
@@ -316,8 +308,7 @@
                                 Ducha, Toallas, Papel  Higienico.
 							</span>
                             <h5> $414.000 / Noche</h5>
-                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=4&adults=4"
-                                target="_blank">Reservar</a>
+                            <a style="border: solid 1px rgb(20, 184, 5); background:rgba(19, 187, 84, 0.775)" class="btn btn-lg btn-circle btn-outline-new-black" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank" target="_blank">Reservar</a>
                         </div>
                     </div>
 
@@ -399,17 +390,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>HORARIO DE APERTURA</h3>
-                    <p><span class="text-color">Monday: </span>Closed</p>
-                    <p><span class="text-color">Tue-Wed :</span> 9:Am - 10PM</p>
-                    <p><span class="text-color">Thu-Fri :</span> 9:Am - 10PM</p>
-                    <p><span class="text-color">Sat-Sun :</span> 5:PM - 10PM</p>
+                    <p>Reserva <span class="text-color">24/7</span></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>INFORMACIÓN DEL CONTACTO
                     </h3>
                     <p class="lead">Vereda Susaca - Sector, Aquitania, Boyacá</p>
-                    <p class="lead"><a href="#">+57 320 3985300</a></p>
-                    <p><a href="#"> info@admin.com</a></p>
+                    <p class="lead"><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+57 320 3985300</a></p>
+                    <p><a href="mailto:lagomuisca@gmail.com"> lagomuisca@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>Redes Sociales</h3>
