--- a/contact.html
+++ b/contact.html
@@ -243,7 +243,7 @@
                 <div class="col-lg-3 col-md-6">
                     <h3>HORARIO DE APERTURA</h3>
                     <center>
-                        <p><span class="text-color">Con reservacion </span></p>
+                        <p>Reserva<span class="text-color">24/7</span></p>
                     </center>
 
                 </div>
@@ -251,8 +251,8 @@
                     <h3>INFORMACIÓN DEL CONTACTO
                     </h3>
                     <p class="lead">Vereda Susaca - Sector, Aquitania, Boyacá</p>
-                    <p class="lead"><a href="#">+57 320 3985300</a></p>
-                    <p><a href="#"> info@admin.com</a></p>
+                    <p class="lead"><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+57 320 3985300</a></p>
+                    <p><a href="mailto:lagomuisca@gmail.com"> lagomuisca@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3>Redes Sociales</h3>
