--- a/index.html
+++ b/index.html
@@ -585,11 +585,11 @@
     <!-- End Contact info -->
     <!--Boton de whatsapp -->
 
-    <div class="btn-whatsapp ">
+    <!-- <div class="btn-whatsapp ">
         <a href="https://api.whatsapp.com/send?phone=+573203985300 " target="_blank ">
             <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png " alt="reservar domos aquitania ">
         </a>
-    </div>
+    </div> -->
     <!-- Start Footer -->
     <footer class="footer-area bg-f ">
         <div class="container ">
