--- a/about.html
+++ b/about.html
@@ -80,6 +80,8 @@
                                 <a class="dropdown-item" href="#" target="_blank">facebook</a>
                                 <a class="dropdown-item" href="https://instagram.com/Glampinglagomuisca?utm_medium=copy_link" target="_blank">Instagram</a>
                                 <a class="dropdown-item" href="https://maps.app.goo.gl/5hRyKr1ZzbhuKcXy5" target="_blank">Google</a>
+                                <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">whatsapp</a>
+
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
