--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bienvenidos <br> Domos Lago Muisca</strong></h1>
                             <p class="m-b-40">Desconectate de la rutina y conectate con la naturaleza.</p>
-                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="#">Reserva directa</a></p>
+                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573203985300">Reserva directa</a></p>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bienvenidos <br> Domos Lago Muisca</strong></h1>
                             <p class="m-b-40">Desconectate de la rutina y conectate con la naturaleza.</p>
-                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://www.airbnb.com.co/rooms/53834124?_set_bev_on_new_domain=1642039486_NGFkOTI5YTU4OTFi&source_impression_id=p3_1642039492_5yEfwtoSMifKg5Vu&guests=1&adults=1">Reserva directa</a></p>
+                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https:https://api.whatsapp.com/send?phone=+573203985300">Reserva directa</a></p>
                         </div>
                     </div>
                 </div>
