--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                             En el lugar hay espacio para hacer fogata o una parrillada, cerca hay muelle para paseos en lancha y restaurantes, hay varios atractivos turísticos entre ellos visitar playa blanca. Número de permiso 94069
                         </p>
                         <p>Sed semper orci sit amet porta placerat. Etiam quis finibus eros. Sed aliquam metus lorem, a pellentesque tellus pretium a. Nulla placerat elit in justo vestibulum, et maximus sem pulvinar.</p>
-                        <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573203985300">Reservation</a>
+                        <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573203985300">Reserva directa</a>
                     </div>
 
                 </div>
