--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <a class="dropdown-item" href="#" target="_blank">facebook</a>
                                 <a class="dropdown-item" href="https://instagram.com/Domoslagomuisca?utm_medium=copy_link" target="_blank">Instagram</a>
                                 <a class="dropdown-item" href="https://maps.app.goo.gl/5hRyKr1ZzbhuKcXy5" target="_blank">Google</a>
-                                <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">whatsapp</a>
+                                <a class="dropdown-item" href="https://api.whatsapp.com/send?phone=+573115396653" target="_blank">whatsapp</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Contacto</a></li>
@@ -107,7 +107,7 @@
                         <div class="col-md-12">
                             <h1 class="m-b-20"><strong>Bienvenidos <br> Domos Lago Muisca</strong></h1>
                             <p class="m-b-40">Desconectate de la rutina y conectate con la naturaleza.</p>
-                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573203985300">Reserva directa</a></p>
+                            <p><a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573115396653">Reserva directa</a></p>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
                             el lugar hay espacio para hacer fogata o una parrillada, cerca hay muelle para paseos en lancha y restaurantes, hay varios atractivos turísticos entre ellos visitar playa blanca. Número de permiso 94069
                         </p>
                         <p>Sed semper orci sit amet porta placerat. Etiam quis finibus eros. Sed aliquam metus lorem, a pellentesque tellus pretium a. Nulla placerat elit in justo vestibulum, et maximus sem pulvinar.</p>
-                        <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573203985300">Reserva directa</a>
+                        <a class="btn btn-lg btn-circle btn-outline-new-white" href="https://api.whatsapp.com/send?phone=+573115396653">Reserva directa</a>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                         <h2>¡ Reserva directamente con nosotros aqui !</h2>
                     </div>
                     <center>
-                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">
+                        <a class="lightbox box_a" href="https://api.whatsapp.com/send?phone=+573115396653" target="_blank">
                             <img class="img-fluid iconoImg" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
                         </a>
                     </center>
@@ -422,7 +422,7 @@
             <div class="tz-gallery">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
-                        <a class="lightbox" href="https://api.whatsapp.com/send?phone=+573203985300" target="_blanck">
+                        <a class="lightbox" href="https://api.whatsapp.com/send?phone=+573115396653" target="_blanck">
                             <img class="img-fluid" src="images/logo.jpg" alt="Gallery Images domos aquitania boyaca">
                         </a>
                     </div>
@@ -582,7 +582,7 @@
                     <div class="overflow-hidden ">
                         <h4>Telefono</h4>
                         <p class="lead ">
-                            +57 320 3985300
+                            +573115396653
                         </p>
                     </div>
                 </div>
@@ -635,7 +635,7 @@
                     <h3>INFORMACIÓN DEL CONTACTO
                     </h3>
                     <p class="lead ">Vereda Susaca - Sector, Aquitania, Boyacá</p>
-                    <p class="lead "><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+57 320 3985300</a></p>
+                    <p class="lead "><a href="https://api.whatsapp.com/send?phone=+573203985300" target="_blank">+573115396653</a></p>
                     <p><a href="mailto:lagomuisca@gmail.com"> lagomuisca@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-md-6 ">
